# prediction-market-maker

./: README.md  pyproject.toml
config/: secrets.py  settings.py
pricing/: sizing.py
src/: main.py
src/data/: base_feed.py  kalshi_feed.py  polymarket_feed.py  polymarket_market_resolver.py  unified_book.py
src/execution/: eip712_signer.py  kalshi_auth.py  kalshi_order_manager.py  order_manager.py  order_types.py  polymarket_auth.py  reconciliation.py
src/hedging/: delta_hedge.py  hyperliquid_price_feed.py  hyperliquid_signer.py
src/inventory/: manager.py
src/pricing/: fair_value.py
src/risk/: engine.py
tests/: backtest_simulator.py  test_core.py
