[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "prediction-mm"
version = "0.1.0"
description = "Algorithmic market making engine for Polymarket CLOB and Kalshi"
requires-python = ">=3.11"

dependencies = [
    # Async runtime
    "uvloop>=0.19",
    "aiohttp>=3.9",
    "websockets>=12.0",

    # Quantitative
    "numpy>=1.26",
    "scipy>=1.12",

    # Config / validation
    "pydantic>=2.6",
    "pydantic-settings>=2.2",

    # Ethereum signing
    "eth-account>=0.10",
    "eth-keys>=0.5",
    "cryptography>=42.0",   # RSA for Kalshi

    # Logging
    "structlog>=24.1",

    # CLI
    "click>=8.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
dev = [
    "black",
    "isort",
    "mypy",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
log_cli = true
log_cli_level = "WARNING"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
